--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,7 +5,10 @@
 
 .load-more {
   text-align: center;
-   margin-top: 30px;
-   opacity: 0;
+  margin-top: 30px;
+  
 }
 
+.is-hidden {
+  display: none;
+}
