--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -9,3 +9,29 @@
   
 }
 
+
+
+.container {
+  width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0 15px;
+}
+
+
+.gallery {
+  display: flex; 
+  flex-wrap: wrap;
+  margin-top: 30px;
+}
+
+.thumb {
+  /* flex-basis: calc((100% - 3 * 20px) / 3); */
+  padding: 20px;
+ 
+}
+
+/* .info {
+  text-decoration: none;
+ 
+} */
