--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -39,3 +39,18 @@
 .is-hidden {
   display: none;
 }
+
+.search-form__button {
+  padding-left: 10px;
+  padding-right: 10px;
+  border-radius: 10px;
+  font-weight: 600;
+}
+
+.load-more {
+  padding: 10px;
+  border-radius: 10px;
+  font-weight: 600;
+  margin-left: auto;
+  margin-right: auto;
+}
